# openapi.yaml
@@ -50,50 +50,86 @@ paths:
                     status: error
                     error:
                       message: Sample error message
-  /api/folders/command:
+  /api/folders:
     post:
-      operationId: PostApiFoldersCommand
-      summary: Folder Commands
-      description: Folder Commands
+      operationId: PostApiFolders
+      summary: Create folder
+      description: Create folder
       requestBody:
-        description: POST /api/folders/command Request body
+        description: POST /api/folders Request body
         content:
           application/json:
             schema:
-              allOf:
-                - type: object
-                - oneOf:
-                    - type: object
-                      properties:
-                        type:
-                          type: string
-                          const: create_folder
-                        name:
-                          type: string
-                        parent_id:
-                          type: string
-                      required:
-                        - type
-                        - name
-                        - parent_id
-                    - type: object
-                      properties:
-                        type:
-                          type: string
-                          const: rename_folder
-                        _id:
-                          type: string
-                        name:
-                          type: string
-                      required:
-                        - type
-                        - _id
-                        - name
+              type: object
+              properties:
+                name:
+                  type: string
+                  minLength: 1
+                parent_id:
+                  type: string
+              required:
+                - name
+                - parent_id
       security:
         - APIKEY_1: []
       responses:
         "200":
-          description: POST /api/folders/command Positive response
+          description: POST /api/folders Positive response
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    const: success
+                  data:
+                    type: object
+                required:
+                  - status
+                  - data
+        "400":
+          description: POST /api/folders Negative response
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    const: error
+                  error:
+                    type: object
+                    properties:
+                      message:
+                        type: string
+                    required:
+                      - message
+                required:
+                  - status
+                  - error
+              examples:
+                example1:
+                  value:
+                    status: error
+                    error:
+                      message: Sample error message
+    get:
+      operationId: GetApiFolders
+      summary: Get folder
+      description: Get folder
+      parameters:
+        - name: folder_id
+          in: query
+          required: true
+          description: GET /api/folders Parameter
+          schema:
+            type: string
+      security:
+        - APIKEY_1: []
+      responses:
+        "200":
+          description: GET /api/folders Positive response
           content:
             application/json:
               schema:
@@ -105,27 +141,312 @@ paths:
                   data:
                     type: object
                     properties:
-                      _id:
+                      id:
                         type: string
-                      folder_name:
-                        type: string
-                      created_by:
-                        type: string
-                      tenant_id:
-                        type: string
-                      parent_id:
+                      name:
                         type: string
                     required:
-                      - _id
-                      - folder_name
-                      - created_by
-                      - tenant_id
-                      - parent_id
+                      - id
+                      - name
                 required:
                   - status
                   - data
         "400":
-          description: POST /api/folders/command Negative response
+          description: GET /api/folders Negative response
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    const: error
+                  error:
+                    type: object
+                    properties:
+                      message:
+                        type: string
+                    required:
+                      - message
+                required:
+                  - status
+                  - error
+              examples:
+                example1:
+                  value:
+                    status: error
+                    error:
+                      message: Sample error message
+  /api/folders/{folder_id}:
+    get:
+      operationId: GetApiFoldersFolderId
+      summary: Get folder
+      description: Get folder
+      parameters:
+        - name: folder_id
+          in: path
+          required: true
+          description: GET /api/folders/:folder_id Parameter
+          schema:
+            type: string
+      security:
+        - APIKEY_1: []
+      responses:
+        "200":
+          description: GET /api/folders/:folder_id Positive response
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    const: success
+                  data:
+                    type: object
+                    properties:
+                      id:
+                        type: string
+                      name:
+                        type: string
+                    required:
+                      - id
+                      - name
+                required:
+                  - status
+                  - data
+        "400":
+          description: GET /api/folders/:folder_id Negative response
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    const: error
+                  error:
+                    type: object
+                    properties:
+                      message:
+                        type: string
+                    required:
+                      - message
+                required:
+                  - status
+                  - error
+              examples:
+                example1:
+                  value:
+                    status: error
+                    error:
+                      message: Sample error message
+  /api/folders/{folder_id}/lineage:
+    get:
+      operationId: GetApiFoldersFolderIdLineage
+      summary: Get folders parents
+      description: Get folders parents
+      parameters:
+        - name: folder_id
+          in: path
+          required: false
+          description: GET /api/folders/:folder_id/lineage Parameter
+          schema:
+            type: string
+      security:
+        - APIKEY_1: []
+      responses:
+        "200":
+          description: GET /api/folders/:folder_id/lineage Positive response
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    const: success
+                  data:
+                    type: object
+                    properties:
+                      folders:
+                        type: array
+                        items:
+                          type: object
+                          properties:
+                            name:
+                              type: string
+                            id:
+                              type: string
+                          required:
+                            - name
+                            - id
+                    required:
+                      - folders
+                required:
+                  - status
+                  - data
+        "400":
+          description: GET /api/folders/:folder_id/lineage Negative response
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    const: error
+                  error:
+                    type: object
+                    properties:
+                      message:
+                        type: string
+                    required:
+                      - message
+                required:
+                  - status
+                  - error
+              examples:
+                example1:
+                  value:
+                    status: error
+                    error:
+                      message: Sample error message
+  /api/folders/{folder_id}/rename:
+    post:
+      operationId: PostApiFoldersFolderIdRename
+      summary: Rename folder
+      description: Rename folder
+      parameters:
+        - name: folder_id
+          in: path
+          required: true
+          description: POST /api/folders/:folder_id/rename Parameter
+          schema:
+            type: string
+      requestBody:
+        description: POST /api/folders/:folder_id/rename Request body
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+              required:
+                - name
+      security:
+        - APIKEY_1: []
+      responses:
+        "200":
+          description: POST /api/folders/:folder_id/rename Positive response
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    const: success
+                  data:
+                    type: object
+                    properties:
+                      name:
+                        type: string
+                      id:
+                        type: string
+                      parent_id:
+                        type:
+                          - string
+                          - "null"
+                    required:
+                      - name
+                      - id
+                required:
+                  - status
+                  - data
+        "400":
+          description: POST /api/folders/:folder_id/rename Negative response
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    const: error
+                  error:
+                    type: object
+                    properties:
+                      message:
+                        type: string
+                    required:
+                      - message
+                required:
+                  - status
+                  - error
+              examples:
+                example1:
+                  value:
+                    status: error
+                    error:
+                      message: Sample error message
+  /api/folders/{folder_id}/children:
+    get:
+      operationId: GetApiFoldersFolderIdChildren
+      summary: Get folder children
+      description: Get folder children
+      parameters:
+        - name: folder_id
+          in: path
+          required: true
+          description: GET /api/folders/:folder_id/children Parameter
+          schema:
+            oneOf:
+              - type: string
+                minLength: 1
+              - type: string
+                const: root
+      security:
+        - APIKEY_1: []
+      responses:
+        "200":
+          description: GET /api/folders/:folder_id/children Positive response
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    const: success
+                  data:
+                    type: object
+                    properties:
+                      folders:
+                        type: array
+                        items:
+                          type: object
+                          properties:
+                            name:
+                              type: string
+                            id:
+                              type: string
+                            children:
+                              type: array
+                              items:
+                                type: object
+                          required:
+                            - name
+                            - id
+                            - children
+                    required:
+                      - folders
+                required:
+                  - status
+                  - data
+        "400":
+          description: GET /api/folders/:folder_id/children Negative response
           content:
             application/json:
               schema:
